# whisper-engine

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  architecture.pu  imgui.ini  todo.md
.cache/clangd/index/: GraphEditor.cpp.7D5AB0B82FA28E60.idx  GraphEditor.h.47102C0EECAD56EA.idx  ImCurveEdit.cpp.135B91576C4422A0.idx  ImCurveEdit.h.64B15B8260DF904F.idx  ImGradient.cpp.CC7A700490C09BA9.idx  ImGradient.h.80D0FEE4B40B2B91.idx  ImGuizmo.cpp.8552608661922004.idx  ImGuizmo.h.5090E37D9510C578.idx  ImSequencer.cpp.7D8DF899FD728FA4.idx  ImSequencer.h.7A6D2D7BB26E55F8.idx  imconfig.h.67B7F1027C1ACDB2.idx  imgui.cpp.EAD1B5DB5C24FBEB.idx  imgui.h.4A904FD6E0C64489.idx  imgui_draw.cpp.8425A7012066AFCD.idx  imgui_impl_glfw.cpp.2416D85A785734F2.idx  imgui_impl_glfw.h.BB4173FB3DA3CB04.idx  imgui_impl_vulkan.cpp.52FE7AB84710FA02.idx  imgui_impl_vulkan.h.57CBFA2D906EFC5D.idx  imgui_internal.h.C8090A29827D4748.idx  imgui_tables.cpp.08F536A21F50924C.idx  imgui_widgets.cpp.3492056D4C6A4706.idx  imstb_rectpack.h.131302A00D85C1FE.idx  imstb_textedit.h.55D1A3417B3E3CE1.idx  imstb_truetype.h.6EA7A6D2B60762F4.idx  main.cpp.D488F746E64004D2.idx  render-graph.cpp.97156C725FB50AD1.idx  render-graph.h.71CC69F4894DB78C.idx  renderer.cpp.30F7F53B80BDF15D.idx  renderer.h.56BD174389B1F969.idx  tinyxml2.cpp.3668760F20873AD4.idx  tinyxml2.h.33B3D1D41B5434B3.idx  wsp_device.cpp.1CD95AF5F854599D.idx  wsp_device.h.68220F1D96B28DC9.idx  wsp_devkit.h.EB4797040A14DBCC.idx  wsp_engine.cpp.578764B8A638AB63.idx  wsp_engine.h.C2181DA4D8F83241.idx  wsp_render_graph.cpp.A63D2EDFAFF4FA5A.idx  wsp_render_graph.h.13CB7FB1CDCF0759.idx  wsp_renderer.cpp.5B971DA16C091897.idx  wsp_renderer.h.D0DE25580764B188.idx  (+6 more)
.external/: CMakeLists.txt
assets/: Avocado0FS.glsl  Untitled.gltf  cube.glb
assets/City/: license.txt  scene.gltf
assets/adamHead/: adamHead.gltf
assets/creature/: Creature_Substance.gltf
assets/lieutenantHead/: lieutenantHead.gltf
config/: imgui_user_config.h
demo/: CMakeLists.txt  main.cpp  sizeof.cpp
editor/: irradiance.exr  shortcuts.xml  skybox.exr
engine-assets/: alpes-irradiance.exr  irradiance.exr  puresky-day-irradiance.exr  puresky-day-irradiance_2.exr  puresky-night-irradiance.exr  skybox_128.exr  skybox_16.exr  skybox_256.exr  skybox_32.exr  skybox_64.exr  skybox_8.exr  venice-sunset-irradiance.exr  workshop-irradiance.exr
shaders/: CMakeLists.txt  background.frag  background.vert  mesh.frag  mesh.vert  model.vert  pbr_lib.glsl  postprocess.frag  postprocess.vert  prepass.frag  prepass.vert  prepass_lib.glsl  shadowmapping.frag  test.vert  tonemapping.frag  tonemapping.vert  triangle.frag  triangle.vert  ubo.glsl  void.vert
tooling/: CMakeLists.txt  frost.py  main.cpp
whisper/: CMakeLists.txt  IconsMaterialSymbols.h  frost.hpp  wsp_assets_manager.cpp  wsp_assets_manager.hpp  wsp_camera.cpp  wsp_camera.hpp  wsp_constants.hpp  wsp_custom_imgui.hpp  wsp_custom_types.hpp  wsp_device.cpp  wsp_device.hpp  wsp_devkit.hpp  wsp_drawable.hpp  wsp_editor.cpp  wsp_editor.h  wsp_editor.hpp  wsp_editor_camera.cpp  wsp_editor_camera.hpp  wsp_engine.cpp  wsp_engine.h  wsp_engine.hpp  wsp_environment.cpp  wsp_environment.hpp  wsp_global_ubo.hpp  wsp_graph.cpp  wsp_graph.cpp~  wsp_graph.hpp  wsp_handles.hpp  wsp_image.cpp  wsp_image.hpp  wsp_input_action.cpp  wsp_input_action.hpp  wsp_input_manager.cpp  wsp_input_manager.hpp  wsp_inputs.hpp  wsp_material.cpp  wsp_material.hpp  wsp_material.hpp~  wsp_mesh.cpp  (+26 more)
whisper/.generated/: IconsMaterialSymbols.generated.hpp  dictionary.generated.hpp  frost.generated.hpp  frost_editor.generated.hpp  slot_map.generated.hpp  wsp_assets_manager.generated.hpp  wsp_camera.generated.hpp  wsp_constants.generated.hpp  wsp_cubemap.generated.hpp  wsp_custom_imgui.generated.hpp  wsp_custom_types.generated.hpp  wsp_device.generated.hpp  wsp_devkit.generated.hpp  wsp_drawable.generated.hpp  wsp_editor.generated.hpp  wsp_editor_camera.generated.hpp  wsp_engine.generated.hpp  wsp_environment.generated.hpp  wsp_global_ubo.generated.hpp  wsp_graph.generated.hpp  wsp_handles.generated.hpp  wsp_image.generated.hpp  wsp_input_action.generated.hpp  wsp_input_manager.generated.hpp  wsp_inputs.generated.hpp  wsp_material.generated.hpp  wsp_mesh.generated.hpp  wsp_node.generated.hpp  wsp_render_manager.generated.hpp  wsp_renderer.generated.hpp  wsp_sampler.generated.hpp  wsp_scene.generated.hpp  wsp_static_textures.generated.hpp  wsp_static_utils.generated.hpp  wsp_swapchain.generated.hpp  wsp_texture.generated.hpp  wsp_transform.generated.hpp  wsp_typedefs.generated.hpp  wsp_viewport_camera.generated.hpp  wsp_window.generated.hpp
whisper/rendering/: CMakeLists.txt  fl_graph.cpp  fl_graph.h  fl_handles.h  wsp_camera.cpp  wsp_camera.h  wsp_camera.hpp  wsp_device.cpp  wsp_device.h  wsp_device.hpp  wsp_global_ubo.h  wsp_global_ubo.hpp  wsp_graph.cpp  wsp_graph.h  wsp_graph.hpp  wsp_handles.h  wsp_handles.hpp  wsp_model.cpp  wsp_model.hpp  wsp_renderer.cpp  wsp_renderer.h  wsp_renderer.hpp  wsp_static_utils.h  wsp_swapchain.cpp  wsp_swapchain.h  wsp_window.cpp  wsp_window.h  wsp_window.hpp
whisper/wsp_types/: dictionary.hpp  slot_map.hpp
wsp/: CMakeLists.txt  wsp_engine.cpp  wsp_engine.h
wsp/rendering/: CMakeLists.txt  wsp_device.cpp  wsp_device.h  wsp_render_graph.cpp  wsp_render_graph.h  wsp_renderer.cpp  wsp_renderer.h  wsp_static_utils.h  wsp_swapchain.cpp  wsp_swapchain.h  wsp_window.cpp  wsp_window.h
